[project]
name = "lynis-report-parser"
version = "0.1.0"
description = "Parser for Lynis security audit report files"
authors = [
  { name="Alexandru Lolea", email="alexandru.n.lolea@gmail.com" }
]
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


